--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: white;
+  background: black;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 .navbar-logo {
-  color: black;
+  color: white;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
@@ -33,7 +33,7 @@
 }
 
 .nav-links {
-  color: black;
+  color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
@@ -61,7 +61,7 @@
   font-size: 18px;
   color: black;
   cursor: pointer;
-  background-color: #808080;
+  background-color: white;
 }
 
 .contact-button:hover {
