--- a/src/components/Pages/ContactMe.css
+++ b/src/components/Pages/ContactMe.css
@@ -1,19 +1,22 @@
 body {
-    background-color: #f1f3ff;
+    background-color: black;
+    color: white;
 }
 
-.contact-page {
+/* this is for the first section of the page  */
+
+.contact-page-1 {
     background-size: cover;
     background-position: center;
     display: flex;
-    height: 70vh;
+    height: 90vh;
 }
 
 .contact-left-column {
     width: 50%;
     display: flex;
     justify-content: center;
-    padding: 50px;
+    padding: 10px;
 }
 
 .contact-img {
@@ -22,7 +25,7 @@ body {
 
 .contact-right-column {
     width: 50%;
-    padding-right: 10%;
+    padding-right: 5%;
     margin-top: auto;
     margin-bottom: auto;
     text-align: center;
@@ -30,8 +33,8 @@ body {
 
 .contact-title {
     font-size: 3rem;
+    padding-bottom: 20px;
     font-family: 'Open Sans', sans-serif;
-    
 }
 
 .contact-desc {
@@ -64,7 +67,7 @@ a.social:hover {
 }
 
 a.github {
-    color: #171515;
+    color: white;
 }
 
 a.twitter {
@@ -81,10 +84,6 @@ a.linkedln {
 
 a.instagram {
     color: #bc2a8d;
-}
-
-.resume-container {
-    
 }
 
 .resume {
@@ -110,14 +109,130 @@ a.instagram {
     border: 2px solid white;
 }
 
-@media screen and (max-width: 500px) {
-    .contact-page {
-        background-color: #f1f3ff;
-        background-size: cover;
-        background-position: center;
+/* This is for the second section of the page  */
+
+.contact-page-2 {
+    background-image: url(../../Images/contact-backdrop.webp);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    text-align: center;
+    height: 70vh;
+}
+
+.inTouch {
+    font-size: 2.5rem;
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 1.5rem;
+    text-align: center;
+}
+
+.contact-left-column-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 30%;
+}
+
+.contact-right-column-2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 70%;
+    height: 80%;
+    border-left: 1px solid white;
+}
+
+.icon-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.icon-text {
+    color: white;
+    font-size: 1rem;
+    padding: 0.5rem;
+}
+
+.fa-phone {
+    color: green;
+    font-size: 2rem;
+}
+
+.fa-envelope {
+    color: orange;
+    font-size: 2rem;
+}
+
+.fa-location-dot {
+    color: #4267B2;
+    font-size: 2rem;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+}
+.info-label {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    padding: 10px;
+}
+
+.info-input {
+    background-color: rgb(64, 64, 64, 0.8);
+    height: 30px;
+    width: 80%;
+    margin: auto;
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+}
+
+.info-input:focus {
+    background-color: rgb(64, 64, 64, 0.5);
+}
+
+.send {
+    padding: 10px 25px;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    color: black;
+    cursor: pointer;
+    background-color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+}
+
+.send:hover {
+    padding: 8px 23px;
+    transition: all 0.3s ease-out;
+    background-color: transparent;
+    color: white;
+    background-color: black;
+    border-radius: 4px;
+    border: 2px solid white;
+}
+
+
+/* this is for the mobile section */
+
+@media screen and (max-width: 800px) {
+    .contact-page-1 {
         display: flex;
         flex-direction: column;
-        height: 90vh;
     }
     
     .contact-left-column {
@@ -135,5 +250,59 @@ a.instagram {
         display: flex;
         flex-direction: column;
         text-align: center;
+    }
+
+    .contact-title {
+        font-size: 2rem;
+        font-family: 'Open Sans', sans-serif;
+        
+    }
+    
+    .contact-desc {
+        color: grey;
+        font-size: 0.7rem;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 600;
+    }
+
+    .resume {
+        font-size: 14px;
+    }
+
+    .inTouch {
+        font-size: 1.5rem;
+        font-family: 'Open Sans', sans-serif;
+        padding-bottom: 1rem;
+    }
+    
+    .icons {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .icon-section {
+        padding: 10px;
+    }
+    
+    .icon-text {
+        color: white;
+        font-size: 1rem;
+        padding: 0.3rem;
+    }
+    
+    .fa-phone {
+        color: green;
+        font-size: 2rem;
+    }
+    
+    .fa-envelope {
+        color: orange;
+        font-size: 2rem;
+    }
+    
+    .fa-location-dot {
+        color: #4267B2;
+        font-size: 2rem;
     }
 }
