progress on education and experience, new tab called profile

--- a/src/components/Pages/ContactMe.css
+++ b/src/components/Pages/ContactMe.css
@@ -224,6 +224,14 @@ a.instagram {
     resize: none;
 }
 
+.info-input:hover {
+    background-color: rgb(43, 45, 47, 0.8);
+}
+
+.message-input:hover {
+    background-color: rgb(43, 45, 47, 0.8);
+}
+
 .info-input:focus {
     background-color: rgb(64, 64, 64, 0.5);
 }
