--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-.contact-me, .education, .experience, .publications, .info {
+.projects {
   display: flex;
   height: 90vh;
   align-items: center;
