--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -39,7 +39,7 @@
 }
 
 .nav-links:hover {
-  background-color: black;
+  background-color: #bec2cb;
   color: white;
   border-radius: 4px;
   transition: all 0.2s ease-out;
@@ -65,13 +65,13 @@
 }
 
 .contact-button:hover {
-  padding: 8px 23px;
+  padding: 7px 22px;
   transition: all 0.3s ease-out;
   background-color: transparent;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: black;
   border-radius: 4px;
-  border: 2px solid #808080;
+  border: 3px solid white;
 }
 
 .menu-icon {
@@ -101,7 +101,7 @@
   }
 
   .nav-active {
-    background: #000038;
+    background: black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
