--- a/src/components/Pages/AboutMe.css
+++ b/src/components/Pages/AboutMe.css
@@ -1,96 +1,384 @@
-  .about-page {
-    background-color: #f1f3ff;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
-  }
+body {
+  background-color: black;
+}
 
-  .about-right-section {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    padding: 10%;
-  }
+.about-page {
+  display: flex;
+  height: 90vh;
+}
 
-  .about-img {
-    width: 100%;
-    border-radius: 25px;
-  }
+/* this is the intro section */
 
-  .about-left-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    text-align: center;
-    /* margin: auto; */
-  }
+.about-left-section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: center;
+  padding: 5%;
+  padding-top: 0;
+  padding-bottom: 10%;
+  position: relative;
+}
 
-  .intro {
-    font-size: 1.5rem;
-    font-weight: 300;
-  }
+.about-right-section {
+  width: 50%;
+}
 
-  .name {
-    font-size: 4rem;
-    padding-bottom: 10px;
-  }
+.about-img {
+  border-radius: 25px;
+  width: 100%;
+}
 
-  .title {
-    height: 50px;
-    overflow: hidden;
-  }
+.intro {
+  font-size: 20px;
+  color: grey;
+}
 
-  .title-wrapper {
-    height: 50px;
-    animation: move 10s ease-in-out infinite alternate;
-  }
+.name {
+  font-size: 80px;
+}
 
-  .title-item {
-    height: 50px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #59b256;
-    align-items: center;
-    text-align: center;
-  }
+.about-social-container {
+  display: flex;
+  background-color: rgb(64, 64, 64, 0.4);
+  width: fit-content;
+  border-radius: 15px;
+  position: absolute;
+  bottom: 10%;
+}
 
-  @keyframes move {
-    25% {
-      transform: translateY(-50px);
+.social-object {
+  display: flex;
+  padding: 2px;
+  padding-left: none;
+  text-decoration: none;
+  align-items: center;
+}
+
+.object-name {
+  display: none;
+}
+
+.fa-github {
+  color: gray;
+  font-size: 2rem;
+  padding: 0.5rem;
+}
+
+.fa-github:hover + .object-name {
+  display: flex;
+  color: white;
+  padding: 0.5rem;
+}
+
+.fa-twitter {
+  color: gray;
+  font-size: 2rem;
+  padding: 0.5rem;
+}
+
+.fa-twitter:hover + .object-name {
+  display: flex;
+  color: white;
+  padding: 0.5rem;
+}
+
+.fa-facebook {
+  color: gray;  
+  font-size: 2rem;
+  padding: 0.5rem;
+}
+
+.fa-facebook:hover + .object-name {
+  display: flex;
+  color: white;
+  padding: 0.5rem;
+}
+
+.fa-linkedin {
+  color: gray;  
+  font-size: 2rem;
+  padding: 0.5rem;
+}
+
+.fa-linkedin:hover + .object-name {
+  display: flex;
+  color: white;
+  padding: 0.5rem;
+}
+
+.fa-instagram {
+  color: gray;  
+  font-size: 2rem;
+  padding: 0.5rem;
+}
+
+.fa-instagram:hover + .object-name {
+  display: flex;
+  color: white;
+  padding: 0.5rem;
+}
+
+/* this is the services section */
+
+.services {
+  text-align: left;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  margin-left: 3.66%;
+  margin-right: 3.66%;
+}
+
+.service-page-subtitle {
+  font-size: 18px;
+  padding-left: 5%;
+  color: gray;
+}
+
+.service-page-title {
+  font-size: 3rem;
+  padding-left: 5%;
+}
+
+.service-sec {
+  background-color: rgb(64, 64, 64, 0.4);
+  margin: 5%;
+  padding-bottom: 2px;
+}
+
+.service-sec:hover {
+  padding-bottom: 0;
+  border-bottom: 2px solid green; 
+}
+
+.service-title {
+  padding: 10%;
+  padding-bottom: 0;
+  padding-top: 0.7rem;
+  font-size: 1.5rem;
+}
+
+.service-desc {
+  padding: 10%;
+  padding-top: 0.5rem;
+  color: gray;
+}
+
+.fa-terminal {
+  padding: 10%;
+  padding-bottom: 0;
+  font-size: 3rem;
+  color: green;
+}
+
+.fa-css3-alt {
+  padding: 10%;
+  padding-bottom: 0;
+  font-size: 3rem;
+  color: green;
+}
+
+.fa-share-nodes {
+  padding: 10%;
+  padding-bottom: 0;
+  font-size: 3rem;
+  color: green;
+}
+
+.fa-wand-magic-sparkles {
+  padding: 10%;
+  padding-bottom: 0;
+  font-size: 3rem;
+  color: green;
+}
+
+.fa-clapperboard {
+  padding: 10%;
+  padding-bottom: 0;
+  font-size: 3rem;
+  color: green;
+}
+
+/* this is the testimonials section */
+
+.testimonials {
+  text-align: left;
+}
+
+.test-title {
+  padding-left: 5%;
+  font-size: 3.5rem;
+}
+
+.test-sub-title {
+  padding-top: 5%;
+  padding-left: 5%;
+  font-size: 18px;
+  color: gray;
+}
+
+.testimonials-section {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+}
+
+.testimonial-block {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+  background-color: rgb(64, 64, 64, 0.4);
+  padding: 2.5%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+}
+
+.name-role-img {
+  padding: 2.5%;
+  display: flex;
+  align-items: center;
+}
+
+.test-img-sec {
+  padding-right: 2.5%;
+}
+
+.test-img {
+  height: 70px;
+  border-radius: 35px;
+  justify-content: end;
+}
+
+.test-name {
+  font-size: 20px;
+}
+
+.test-role {
+  font-size: 20px;
+  color: grey;
+}
+
+.test-desc {
+  padding: 2.5%;
+  padding-top: 0;
+  color: gray;
+  font-size: 16px;
+}
+ 
+  @media screen and (max-width: 800px) { 
+    .about-left-section {
+      width: 100%;
     }
-    50% {
-      transform: translateY(-100px);
-    }
-    75% {
-      transform: translateY(-150px);
-    }
-    100% {
-      transform: translateY(-200px);
-    }
-  }
-  
-  .description{
-    padding-top: 10px;
-  }
-  
-  /* .i-scroll {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    bottom: 20px;
-  }
-  
-  .i-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-  }  */
-  
-  @media screen and (max-width: 600px) { 
     
+    .about-right-section {
+      display: none;
+    }
+
+    .services {
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      margin: 0%;
+    }
+    
+    .service-page-subtitle {
+      font-size: 12px;
+    }
+    
+    .service-page-title {
+      font-size: 40px;
+      padding-bottom: 5%;
+    }
+    
+    .service-sec {
+      margin-top: 0;
+      padding-bottom: 0;
+      border-bottom: 2px solid green;
+    }
+    
+    .service-sec:hover {
+      padding-bottom: 0;
+      border-bottom: 2px solid green; 
+    }
+    
+    .service-title {
+      padding-bottom: 0;
+      font-size: 20px;
+    }
+    
+    .service-desc {
+      font-size: 12px;
+    }
+    
+    .fa-terminal {
+      padding: 10%;
+      padding-bottom: 0;
+      font-size: 2rem;
+    }
+    
+    .fa-css3-alt {
+      padding: 10%;
+      padding-bottom: 0;
+      font-size: 2rem;
+    }
+    
+    .fa-share-nodes {
+      padding: 10%;
+      padding-bottom: 0;
+      font-size: 2rem;
+    }
+    
+    .fa-wand-magic-sparkles {
+      padding: 10%;
+      padding-bottom: 0;
+      font-size: 2rem;
+    }
+    
+    .fa-clapperboard {
+      padding: 10%;
+      padding-bottom: 0;
+      font-size: 2rem;
+    }
+
+    .testimonials-section {
+      display: flex;
+      flex-direction: column;
+      margin-left: 1%;
+      margin-right: 1%;
+    }
+
+    .test-title {
+      font-size: 2.5rem;
+    }
+
+    .test-sub-title {
+      padding-top: 5%;
+      font-size: 12px;
+    }
+
+    .test-img {
+      height: 50px;
+      border-radius: 25px;
+      justify-content: end;
+    }
+    
+    .test-name {
+      font-size: 14px;
+    }
+    
+    .test-role {
+      font-size: 14px;
+      color: grey;
+    }
+    
+    .test-desc {
+      padding: 2.5%;
+      padding-top: 0;
+      color: gray;
+      font-size: 10px;
+    }
   } 
