--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
+  overflow-x: hidden;
 }
 
-.projects {
+.projects, .publications {
   display: flex;
   height: 90vh;
   align-items: center;
