--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,17 @@
 .navbar {
   background: black;
-  height: 80px;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 5;
+  transition: top 0.3s;
+  color: white;
+  transition: top 0.5s;
 }
 
 .navbar-logo {
@@ -46,7 +53,7 @@
 }
 
 .fa-bars {
-  color: #fff;
+  color: white;
 }
 
 .nav-links-mobile {
@@ -92,10 +99,10 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 10vh;
     left: -100%;
     opacity: 1;
-    z-index: 1;
+    z-index: 2;
     transition: all 0.5s ease;
     grid-gap: 0px;
   }
@@ -108,7 +115,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 10vh;
     left: 0;
     opacity: 1;
     z-index: 1;
@@ -154,7 +161,7 @@
   }
 
   .nav-links-mobile:hover {
-    background-color: #1888ff;
+    background-color: gray;
     border-radius: 4px;
     padding: 2rem;
     transition: 250ms;
