--- a/src/components/Pages/ContactMe.css
+++ b/src/components/Pages/ContactMe.css
@@ -10,6 +10,7 @@ body {
     background-position: center;
     display: flex;
     height: 90vh;
+    margin-top: 10vh;
 }
 
 .contact-left-column {
