--- a/src/components/Pages/AboutMe.css
+++ b/src/components/Pages/AboutMe.css
@@ -58,7 +58,8 @@ body {
 }
 
 .object-name {
-  display: none;
+  width: 0px;
+  color: white;
 }
 
 .fa-github {
@@ -71,6 +72,8 @@ body {
   display: flex;
   color: white;
   padding: 0.5rem;
+  transition: all ease-in 0.3s;
+  width: fit-content;
 }
 
 .fa-twitter {
@@ -83,6 +86,8 @@ body {
   display: flex;
   color: white;
   padding: 0.5rem;
+  transition: all ease-in 0.3s;
+  width: fit-content;
 }
 
 .fa-facebook {
@@ -93,8 +98,10 @@ body {
 
 .fa-facebook:hover + .object-name {
   display: flex;
-  color: white;
+  
   padding: 0.5rem;
+  transition: all ease-in 0.3s;
+  width: fit-content;
 }
 
 .fa-linkedin {
@@ -107,6 +114,8 @@ body {
   display: flex;
   color: white;
   padding: 0.5rem;
+  transition: all ease-in 0.3s;
+  width: fit-content;
 }
 
 .fa-instagram {
@@ -119,6 +128,8 @@ body {
   display: flex;
   color: white;
   padding: 0.5rem;
+  transition: all ease-in 0.3s;
+  width: fit-content;
 }
 
 /* this is the services section */
@@ -273,6 +284,22 @@ body {
   @media screen and (max-width: 800px) { 
     .about-left-section {
       width: 100%;
+    }
+
+    .fa-github:hover + .object-name {
+      display: none;
+    }
+    .fa-twitter:hover + .object-name {
+      display: none;
+    }
+    .fa-facebook:hover + .object-name {
+      display: none;
+    }
+    .fa-instagram:hover + .object-name {
+      display: none;
+    }
+    .fa-linkedin:hover + .object-name {
+      display: none;
     }
     
     .about-right-section {
