--- a/src/components/Pages/Projects.css
+++ b/src/components/Pages/Projects.css
@@ -50,6 +50,149 @@
     z-index: -1;
 }
 
+.project-info-img {
+    height: 60%;
+    padding: 10px;
+}
+
+.fa-x {
+    font-size: 1.5rem;
+    position: absolute;
+    right: 5%;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.project-info-text {
+    width: 100%;
+    text-align: left;
+    padding: 20px;
+    padding-left: 30px;
+}
+
+.project-info-attribute {
+    display: flex;
+    padding: 5px;
+}
+
+.project-info-title {
+    font-size: 20px;
+    color: gray;
+    width: 150px;
+}
+
+.project-info-title-desc {
+    font-size: 20px;
+    padding-left: 10px;
+}
+
+/* this is the section for project detailed info  */
+
+.no-blur {
+    display: flex;
+    width: 100vw;
+    height: 90vh;
+    position: fixed;
+    top: 10vh;
+    opacity: 0;
+    z-index: -1;
+    transition: all ease-out 0.5s;
+}
+
+.none {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 90vh;
+    background-color: black;
+    z-index: 2;
+    position: fixed;
+    top: 10vh;
+    right: -100vh;
+    align-items: center;
+    transition: all ease-out 0.4s;
+}
+
+.project-compression-blur-sec {
+    display: flex;
+    background-color: rgb(0, 0, 0, 0.85);
+    width: 50vw;
+    height: 90vh;
+    position: fixed;
+    top: 10vh;
+    left: 0%;
+    opacity: 1;
+    z-index: 3;
+    transition: all ease-in 0.4s;
+}
+
+.project-compression-info-sec {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 90vh;
+    background-color: black;
+    z-index: 2;
+    position: fixed;
+    top: 10vh;
+    right: 0;
+    align-items: center;
+    transition: all ease-in 0.4s;
+}
+
+.project-calculator-blur-sec {
+    display: flex;
+    background-color: rgb(0, 0, 0, 0.85);
+    width: 50vw;
+    height: 90vh;
+    position: fixed;
+    top: 10vh;
+    left: 0%;
+    opacity: 1;
+    z-index: 3;
+    transition: all ease-in 0.4s;
+}
+
+.project-calculator-info-sec {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 90vh;
+    background-color: black;
+    z-index: 2;
+    position: fixed;
+    top: 10vh;
+    right: 0;
+    align-items: center;
+    transition: all ease-in 0.4s;
+}
+
+.project-blur-sec {
+    display: flex;
+    background-color: rgb(0, 0, 0, 0.85);
+    width: 50vw;
+    height: 90vh;
+    position: fixed;
+    top: 10vh;
+    left: 0%;
+    opacity: 1;
+    z-index: 3;
+    transition: all ease-in 0.4s;
+}
+
+.project-info-sec {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 90vh;
+    background-color: black;
+    z-index: 2;
+    position: fixed;
+    top: 10vh;
+    right: 0;
+    align-items: center;
+    transition: all ease-in 0.4s;
+}
 
 
 
