--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -45,7 +45,7 @@
 }
 
 .nav-links:hover {
-  background-color: #bec2cb;
+  background-color: #620093;
   color: white;
   border-radius: 4px;
   transition: all 0.1s ease-out;
