--- a/src/components/Pages/AboutMe.css
+++ b/src/components/Pages/AboutMe.css
@@ -23,7 +23,7 @@ body {
 }
 
 .about-right-section {
-  width: 50%;
+  width: 60%;
 }
 
 .about-img {
@@ -66,6 +66,7 @@ body {
   color: gray;
   font-size: 2rem;
   padding: 0.5rem;
+  -webkit-transition: all ease-in 0.3s;
 }
 
 .fa-github:hover + .object-name {
@@ -73,7 +74,7 @@ body {
   color: white;
   padding: 0.5rem;
   transition: all ease-in 0.3s;
-  width: fit-content;
+  width: 70px;
 }
 
 .fa-twitter {
@@ -87,7 +88,7 @@ body {
   color: white;
   padding: 0.5rem;
   transition: all ease-in 0.3s;
-  width: fit-content;
+  width: 70px;
 }
 
 .fa-facebook {
@@ -98,10 +99,10 @@ body {
 
 .fa-facebook:hover + .object-name {
   display: flex;
-  
+  color: white;
   padding: 0.5rem;
   transition: all ease-in 0.3s;
-  width: fit-content;
+  width: 95px;
 }
 
 .fa-linkedin {
@@ -115,7 +116,7 @@ body {
   color: white;
   padding: 0.5rem;
   transition: all ease-in 0.3s;
-  width: fit-content;
+  width: 85px;
 }
 
 .fa-instagram {
@@ -129,7 +130,7 @@ body {
   color: white;
   padding: 0.5rem;
   transition: all ease-in 0.3s;
-  width: fit-content;
+  width: 100px;
 }
 
 /* this is the services section */
