--- a/src/components/Pages/Publications.css
+++ b/src/components/Pages/Publications.css
@@ -258,6 +258,7 @@ html {
 
     .pub-page-img-sec {
         margin: auto;
+        align-items: center;
         width: 100%;
     }
 
@@ -328,7 +329,7 @@ html {
     }
 
     .pub-book {
-        width: 100%;
+        width: fit-content;
         flex-direction: column;
         align-items: center;
     }
