--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -49,7 +49,7 @@
 }
 
 .nav-links:hover {
-  background-color: #620093;
+  background-color: #FC6D6D;
   color: white;
   border-radius: 4px;
   transition: all 0.1s ease-out;
