--- a/src/components/Pages/Profile.css
+++ b/src/components/Pages/Profile.css
@@ -55,7 +55,7 @@ body {
 }
 
 .attribute-time {
-    color: #ce4a7eff;
+    color: #FC6D6D;
     font-size: 3rem;
     text-align: left;
     padding-top: 2%;
@@ -263,47 +263,26 @@ body {
 
 .skills {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(5, minmax(0, 1fr));
     text-align: left;
-    padding-bottom: 2rem;
+    padding: 0 2.5% 2.5% 2.5%;
+    align-items: center;
+    justify-content: center;
 }
 
 .skill-sec {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-
-.skill-img {
-    width: 70%;
+    margin: auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .skill-name {
     font-size: 1rem;
-    width: 120px;
-}
-
-.skill-level {
-    background-color: rgb(64, 64, 64);
-    border-radius: 10px;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-}
-
-.progress-bar {
-    background-color: green;
-    border-radius: 10px;
-    padding-bottom: 2px;
-    height: 20px;
-    font-size: 15px;
+    border: solid 5px green;
+    padding: 60px 10px 60px 10px;
+    border-radius: 100px;
+    width: 151px;
     text-align: center;
-    align-items: center;
-    justify-content: center;
 }
 
 @media screen and (max-width: 900px) {
@@ -391,18 +370,30 @@ body {
         font-size: 14px;
     }
     
-    
     .skills {
-        display: flex;
-        flex-direction: column;
-        padding-left: 2.5%;
-        padding-right: 2.5%;
-        text-align: left;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
     .skills-title {
+        font-size: 2rem;
+        padding-bottom: 0.5rem;
+        padding-top: 0.5rem;
+        text-align: left;
         padding-left: 5%;
-        padding-right: 5%;
     }
 
+    .skill-sec {
+        margin: auto;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+    
+    .skill-name {
+        font-size: 14px;
+        border: solid 3px green;
+        padding: 38px 10px 38px 10px;
+        border-radius: 100px;
+        width: 100px;
+        text-align: center;
+    }
 }
