--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,7 +64,8 @@
 }
 
 .contact-button {
-  padding: 10px 25px;
+  padding: 9px 25px;
+  margin-left: 16px;
   border-radius: 4px;
   outline: none;
   border: none;
@@ -75,13 +76,13 @@
 }
 
 .contact-button:hover {
-  padding: 7px 22px;
+  padding: 6px 22px;
   transition: all 0.3s ease-out;
   background-color: transparent;
   color: white;
   background-color: black;
   border-radius: 4px;
-  border: 3px solid white;
+  border: 3px solid #FC6D6D;
 }
 
 .menu-icon {
