--- a/src/components/Pages/Profile.css
+++ b/src/components/Pages/Profile.css
@@ -263,7 +263,7 @@ body {
 
 .skills {
     display: grid;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-columns: repeat(8, minmax(0, 1fr));
     text-align: left;
     padding: 0 2.5% 2.5% 2.5%;
     align-items: center;
@@ -278,10 +278,10 @@ body {
 
 .skill-name {
     font-size: 1rem;
-    border: solid 5px green;
-    padding: 60px 10px 60px 10px;
+    border: solid 3px green;
+    padding: 36px 10px 36px 10px;
     border-radius: 100px;
-    width: 151px;
+    width: 99px;
     text-align: center;
 }
 
@@ -383,17 +383,16 @@ body {
     }
 
     .skill-sec {
-        margin: auto;
         margin-bottom: 10px;
         margin-top: 10px;
     }
     
     .skill-name {
-        font-size: 14px;
+        font-size: 1rem;
         border: solid 3px green;
-        padding: 38px 10px 38px 10px;
+        padding: 36px 10px 36px 10px;
         border-radius: 100px;
-        width: 100px;
+        width: 99px;
         text-align: center;
     }
 }
