--- a/src/components/Pages/Profile.css
+++ b/src/components/Pages/Profile.css
@@ -24,24 +24,24 @@ body {
 }
 
 .personal-attribute-col {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    display: flex;
 }
 
 .personal-column {
-    display: grid;
-    padding: 5%;
+    display: flex;
+    padding: 30px;
+    width: 50%;
 }
 
 .personal-img {
-   width: 100%;
    border-radius: 25px;
 }
 
 .attribute-column {
+    width: 50%;
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    padding: 5%;
+    padding: 30px 30px 30px 0px;
 }
 
 .attribute {
@@ -285,7 +285,7 @@ body {
     text-align: center;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     .profile-header {
         font-size: 2rem;
         text-shadow: 3px 3px 0px gray;
@@ -294,6 +294,11 @@ body {
 
     .personal-column {
         overflow: hidden;
+        height: 50vh;
+        width: auto;
+        margin: auto;
+        align-items: center;
+        padding: 10px;
     }
     
     .edu-exp-column {
@@ -302,14 +307,23 @@ body {
     }
 
     .personal-attribute-col {
-        display: flex;
         flex-direction: column;
+    }
+
+    .personal-img {
+        height: 80%;
     }
 
     .attribute {
         padding: 5%;
         border-radius: 10px;
         overflow: hidden;
+    }
+
+    .attribute-column {
+        height: 50%;
+        width: 100%;
+        padding: 10px;
     }
 
     .attribute-time {
