--- a/src/components/Pages/Projects.css
+++ b/src/components/Pages/Projects.css
@@ -77,8 +77,8 @@
 
 .project-detailed-view {
     position: fixed;
+    z-index: 5;
     padding: 30px;
-    top: 20%;
     width: 800px;
     height: 600px;
     top: 50%;
@@ -88,15 +88,14 @@
     background-color: white;
     color: black;
     overflow: hidden;
-    transition: all ease-in-out 0.4s;
+    transition: all 0.4s;
+    opacity: 1;
 }
 
 .project-detailed-view-closed {
-    opacity: 0;
-    z-index: -2;
     position: fixed;
+    z-index: -2;
     padding: 30px;
-    top: 20%;
     width: 800px;
     height: 600px;
     top: 50%;
@@ -106,7 +105,8 @@
     background-color: white;
     color: black;
     overflow: hidden;
-    transition: all ease-out 0.1s;
+    transition: all 0.4s;
+    opacity: 0;
 }
 
 .blur {
